# fastapi-url-shortener

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: exceptions.py  main.py  service.py
app/crud/: __init__.py
app/database/: __init__.py  crud.py  db.py
app/models/: __init__.py  urls.py
app/schemas/: __init__.py  user_query.py
app/settings/: config.env  settings.py
app/utils/: __init__.py  utils.py
migrations/: env.py
migrations/versions/: 0a4d8ea0e3f3_url_can_be_not_unique.py  1bd1160b469c_init_new_migrations_add_trigger_for_.py  a6faa37b76b2_init.py  cc84fb2f2307_добавил_таймзону_в_поле_created_at_в_.py  de5eaded11b4_url_необязательно_должен_быть_.py
pg_init/: 00_init_migrations.sql  01_create_trigger.sql
