[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "Url shortener on FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.127.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
